--- a/blog/config.yml
+++ b/blog/config.yml
@@ -12,9 +12,9 @@ site:
 
 authors:
     me:
-        name: "Feily Zhang"
+        name: "林奕清"
         intro: "但远山长，云山乱，晓山青"
-        avatar: "https://cdn.nlark.com/yuque/0/2019/png/257195/1553165955055-avatar/c642b3f3-acf0-44b7-a81f-5dd21f1d1432.png?x-oss-process=image/resize,m_fill,w_192,h_192/format,png"
+        avatar: "https://cdn.nlark.com/yuque/0/2019/png/257195/1554563558039-avatar/1ac31bad-110a-4a7c-83cb-b5195a143ee3.png?x-oss-process=image/resize,m_fill,w_192,h_192/format,png"
 
 build:
     # output: "public"
