--- a/blog/config.yml
+++ b/blog/config.yml
@@ -13,7 +13,7 @@ site:
 authors:
     me:
         name: "林奕清"
-        intro: "我是彗星孤掷久，忆曾飞掠土星环"
+        intro: "星河滚烫，你是人间理想"
         avatar: "https://cdn.nlark.com/yuque/0/2019/png/257195/1555147780483-avatar/550c911e-e363-49b7-8d65-21edddf99a07.png?x-oss-process=image/resize,m_fill,w_192,h_192/format,png"
 
 build:
